--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,24 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "package.json",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "dist"
-        }
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "headers": {
-          "Cache-Control": "no-cache"
-        },
-        "dest": "/index.html"
-      }
-    ]
-  }
+	"version": 2,
+	"builds": [
+		{
+			"src": "package.json",
+			"use": "@vercel/static-build",
+			"config": {
+				"distDir": "dist",
+				"buildCommand": "npm run build",
+				"devCommand": "npm run dev",
+				"installCommand": "npm install"
+			}
+		}
+	],
+	"routes": [
+		{
+			"src": "/(.*)",
+			"headers": {
+				"Cache-Control": "no-cache"
+			},
+			"dest": "/index.html"
+		}
+	]
+}
