--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,12 @@
 {
-    "rewrites": [
-      {
-        "source": "/(.*)",
-        "destination": "/index.html"
-      }
-    ]
+	"rewrites": [
+		{
+			"source": "/api/:path*",
+			"destination": "https://yar-media-otzovik-api.onrender.com/:path*"
+		},
+		{
+			"source": "/(.*)",
+			"destination": "/index.html"
+		}
+	]
 }
